<resources>
    <string name="app_name">GameSdkLib</string>
    <string name="ss_login_select_title">今日游戏通行证</string>
    <string name="ss_login_select_visitors_login">游客登录</string>
    <string name="ss_login_select_mobile_login">手机登录</string>
    <string name="ss_login_encountered_problems">客服QQ号：2641393328</string>
    <string name="ss_unregister_player_tips">未注册手机验证后自动登录</string>
    <string name="ss_send_verification_code">发送验证码</string>
    <string name="ss_enter_game">进入游戏</string>
    <string name="ss_bindaccount_tip">为保障您的数据安全，请尽快绑定您的账号以免因刷机或者设备更换导致数据丢失。</string>
    <string name="ss_unbind">暂不绑定</string>
    <string name="ss_bind">立即绑定</string>
    <string name="ss_bind_account">绑定手机号</string>
    <string name="ss_bind_account_tips">未注册手机验证后自动绑定</string>
    <string name="ss_please_enter_phone_number">请输入手机号</string>
    <string name="ss_please_enter_code">请输入验证码</string>
    <string name="ss_please_enter_pwd">请输入密码</string>
    <string name="ss_user_protocol">今日头条用户协议</string>
    <string name="ss_login_use_otheraccount">登录其他账号</string>
    <string name="ss_account_password_login">账号密码登录</string>
    <string name="ss_login_bytedance">登录今日头条</string>
    <string name="ss_login_bytedance_tips">使用头条账号和密码进行登录</string>
    <string name="ss_forget_pwd">忘记密码</string>
    <string name="ss_registered_account">注册账号</string>
    <string name="ss_password_free_login">免密码登录</string>
    <string name="ss_bind_prompt_information">为了您的账号安全，请尽快绑定</string>
    <string name="ss_switch_account">切换账号</string>
    <string name="ss_bind_account_tip">绑定账号</string>
    <string name="ss_game_pass">今日游戏通行证</string>
    <string name="ss_login_encountered">登录遇到问题</string>
    <string name="ss_you_want_delete_the_game_account">您确定要删除该游戏账号吗</string>
    <string name="ss_sure">确定</string>
    <string name="ss_cancel">取消</string>
    <string name="ss_prompt_authenticate_identity_information">根据《网络游戏暂行办法》，未满18周岁不可进行充值，请验证身份信息</string>
    <string name="ss_enter_real_name">请输入真实姓名</string>
    <string name="ss_input_id_card">请输入18位身份证号码</string>
    <string name="ss_error_message">*错误提示：请核对你的身份证信息</string>
    <string name="ss_verification">验证</string>
    <string name="ss_creating_orders">正在生成订单，请稍后...</string>
    <string name="ss_safe_payment">安全支付</string>
    <string name="ss_product_name">商品名称</string>
    <string name="ss_product_price">价&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;格</string>
    <string name="ss_pay_ali">支付宝支付</string>
    <string name="ss_pay_weixin">微信支付</string>
    <string name="ss_confirm_payment">确认支付</string>
    <string name="ss_please_choose_mode_of_payment">请先选择支付方式</string>
    <string name="title_activity_wxh5_pay">WXH5PayActivity</string>
    <string name="ss_safety_environment_detection">安全环境监测中，请稍后</string>
</resources>
