<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_login_select_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="12dp"
            android:text="@string/ss_login_bytedance"
            android:textColor="@color/heise2"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/ss_login_bytedance_tips"
            android:textColor="@color/heise3"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_bind_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_ttaccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tt_img_close"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_please_enter_phone_number"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shape_bind_bg"
            android:orientation="horizontal">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/et_ttpwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tt_img_close"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_please_enter_pwd"
                android:paddingLeft="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_close" />

            <ImageView
                android:id="@+id/tt_img_line"
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/heise3" />

            <TextView
                android:id="@+id/btn_forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:text="@string/ss_forget_pwd"
                android:textColor="@color/action_resend_text"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_entergame"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bind"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ss_enter_game"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/btn_registered_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="left"
                android:padding="6dp"
                android:text="@string/ss_registered_account"
                android:textColor="@color/heise2"
                android:textSize="12sp" />

            <TextView
                android:clickable="true"
                android:id="@+id/btn_password_free_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="6dp"
                android:text="@string/ss_password_free_login"
                android:textColor="@color/heise2"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
