<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_login_select_bg"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ss_bind_account"
            android:textColor="@color/heise2"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/ss_bind_account_tips"
            android:textColor="@color/heise3"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_bind_bg">

            <EditText
                android:id="@+id/btn_bind_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_please_enter_phone_number"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_close" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@color/heise3" />

            <TextView
                android:id="@+id/tv_send_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/ss_send_verification_code"
                android:textColor="@color/selector_send_code"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shape_bind_bg">

            <EditText
                android:id="@+id/btn_bind_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_please_enter_code"
                android:paddingLeft="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_close" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_bind_immediate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bind"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/ss_bind"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/cb_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_agree_useragreement"
                android:drawablePadding="5dp"
                android:text="同意"
                android:textColor="@color/heise3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/ss_user_protocol"
                android:textColor="@color/biaozhunhong3"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_login_other_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="right"
                android:text="@string/ss_login_use_otheraccount"
                android:textColor="@color/heise2"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
