<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_delete_account"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/ss_you_want_delete_the_game_account"
            android:textColor="@color/heise1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/heise3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/ss_sure"
                android:textColor="@color/heise2" />

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/heise3" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/ss_cancel"
                android:textColor="@color/heise2" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
