<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_login_select_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/ss_login_select_title"
                android:textColor="@color/heise2"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_visitor_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/rocket"
                android:gravity="center"
                android:text="@string/ss_login_select_visitors_login"
                android:textColor="@color/heise2"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_mobile_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/phone"
                android:gravity="center"
                android:text="@string/ss_login_select_mobile_login"
                android:textColor="@color/heise2"
                android:textSize="15sp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ss_login_encountered_problems"
            android:textColor="@color/heise2"
            android:textSize="15sp" />


    </LinearLayout>

</RelativeLayout>
