<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_login_select_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="30dp"
            android:layout_height="30dp">

            <ImageView
                android:id="@+id/iv_back_login_select"
                android:layout_width="17dp"
                android:layout_height="18dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="8dp"
                android:text="@string/ss_login_select_title"
                android:textColor="@color/heise2"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/ss_unregister_player_tips"
            android:textColor="@color/heise3"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tt_sms_login_phone_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tt_img_close"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_please_enter_phone_number"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_close" />

            <ImageView
                android:id="@+id/tt_img_line"
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@color/heise3" />

            <TextView
                android:id="@+id/btn_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:text="@string/ss_send_verification_code"
                android:textColor="@color/action_resend_text"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tt_sms_code_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tt_img_close"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_please_enter_code"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_entergame"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bind"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ss_enter_game"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/cb_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_agree_useragreement"
                android:drawablePadding="5dp"
                android:text="同意"
                android:textColor="@color/heise3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/ss_user_protocol"
                android:textColor="@color/biaozhunhong3"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btn_login_other_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="right"
                android:text="@string/ss_account_password_login"
                android:textColor="@color/heise2"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
