<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_login_select_bg"
        android:minWidth="295dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:background="@drawable/close_video_details_night"
            android:scaleType="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="8dp"
                android:text="@string/ss_login_select_title"
                android:textColor="@color/heise2"
                android:textSize="18sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:lineSpacingExtra="1dp"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/ss_prompt_authenticate_identity_information"
            android:textColor="@color/heise2"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_bind_bg">

            <EditText
                android:id="@+id/et_enter_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_enter_real_name"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/heise1"
                android:textColorHint="@color/heise3"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_name"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/ic_close"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shape_bind_bg">

            <EditText
                android:id="@+id/et_enter_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ss_input_id_card"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="130625199202292022"
                android:textColor="@color/heise1"
                android:textColorHint="@color/heise3"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_clear_id"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/ic_close"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:lineSpacingExtra="1dp"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/ss_error_message"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_verification"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_identity_verification"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ss_verification"
            android:textColor="@color/selector_identity_verification"
            android:textSize="19sp" />

    </LinearLayout>


</RelativeLayout>
