<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_login_select_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/ss_game_pass"
                android:textColor="@color/heise2"
                android:textSize="19sp" />

        </LinearLayout>

        <include layout="@layout/item_expendlist_group"
            ></include>


        <TextView
            android:id="@+id/btn_entergame"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_bind"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ss_enter_game"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ss_login_encountered"
            android:textColor="@color/heise2"
            android:textSize="15sp" />


    </LinearLayout>

</RelativeLayout>
